--- a/02-vars.yml
+++ b/02-vars.yml
@@ -18,3 +18,11 @@
       ansible.builtin.debug:
         msg: URL = {{URL}}
 
+- name: Task Level variable
+  hosts: all
+  tasks:
+    - name: Print URL
+      ansible.builtin.debug:
+        msg: URL = {{URL}}
+      vars:
+        URL: hosts.example.com
