--- a/02-vars.yml
+++ b/02-vars.yml
@@ -42,7 +42,7 @@
   hosts: all
   tasks:
     - name: Print Hostname
-      ansible.buitlin.debug:
+      ansible.builtin.debug:
         msg: Architecture = {{ansible_architecture}}
 
 
