--- a/02-vars.yml
+++ b/02-vars.yml
@@ -43,6 +43,6 @@
   tasks:
     - name: Print Hostname
       ansible.builtin.debug:
-        msg: Architecture = {{ansible_architecture}}
+        msg: Architecture = {{ansible_architecture}}, IP address = {{ansible_eth0.ipv4.address}}
 
 
