--- a/02-vars.yml
+++ b/02-vars.yml
@@ -46,3 +46,14 @@
         msg: Architecture = {{ansible_architecture}}, IP address = {{ansible_eth0.ipv4.address}}
 
 
+- name: Register variable
+  hosts: all
+  tasks:
+    - name: Run a shell command
+      ansible.builtin.shell: uptime
+      register: OUT
+
+    - name: Print Output of shell command
+      ansible.builtin.debug:
+        msg: "{{OUT}}"
+
