--- a/02-vars.yml
+++ b/02-vars.yml
@@ -55,5 +55,5 @@
 
     - name: Print Output of shell command
       ansible.builtin.debug:
-        msg: "{{OUT}}"
+        msg: "{{OUT.stdout}}"
 
