--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -1,4 +1,63 @@
-- name: Print Frontend
-  ansible.builtin.debug:
-    msg: Frontend
+#
+#  The frontend is the service in RobotShop to serve the web content over Nginx.
+#
+#  To Install Nginx.
+#
+#  ```
+#  # yum install nginx -y
+#  # systemctl enable nginx
+#  # systemctl start nginx
+#
+#  ```
+#
+#  Let's download the HTDOCS content and deploy under the Nginx path.
+#
+#  ```
+#  # curl -s -L -o /tmp/frontend.zip "https://github.com/roboshop-devops-project/frontend/archive/main.zip"
+#
+#  ```
+#
+#  Deploy in Nginx Default Location.
+#
+#  ```
+#  # cd /usr/share/nginx/html
+#  # rm -rf *
+#  # unzip /tmp/frontend.zip
+#  # mv frontend-main/* .
+#  # mv static/* .
+#  # rm -rf frontend-main README.md
+#  # mv localhost.conf /etc/nginx/default.d/roboshop.conf
+#
+#  ```
+#
+#  Finally restart the service once to effect the changes.
+#
+#  ```
+#  # systemctl restart nginx
+#
+#  ```
+
+- name: Install Nginx
+  ansible.builtin.yum:
+    name: nginx
+    state: installed
+
+- name: Download and Extract Frontend
+  ansible.builtin.unarchive:
+    src: https://github.com/roboshop-devops-project/frontend/archive/main.zip
+    dest: /tmp
+    remote_src: yes
+
+- name: Cleanup Old HTML Content
+  ansible.builtin.file:
+    path: /usr/share/nginx/html
+    state: absent
+
+- name: Copy the frontend content to nginx path
+  ansible.builtin.copy:
+    src: /tmp/frontend-main/static/
+    dest: /usr/share/nginx/html/
+    remote_src: yes
+
+
 
