--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,3 +1,50 @@
-- name: Pritn MongoDB
-  debug:
-    msg: MongoDB
+
+#  # systemctl enable mongod
+#  # systemctl start mongod
+#
+#  ```
+#
+#  1. Update Listen IP address from 127.0.0.1 to 0.0.0.0 in config file
+#
+#Config file: `/etc/mongod.conf`
+#
+#  then restart the service
+#
+#  ```bash
+#  # systemctl restart mongod
+#
+#  ```
+#
+#  ## Every Database needs the schema to be loaded for the application to work.
+#
+#  Download the schema and load it.
+#
+#  ```
+#  # curl -s -L -o /tmp/mongodb.zip "https://github.com/roboshop-devops-project/mongodb/archive/main.zip"
+#
+#  # cd /tmp
+#  # unzip mongodb.zip
+#  # cd mongodb-main
+#  # mongo < catalogue.js
+#  # mongo < users.js
+#
+#  ```
+#
+#  Symbol `<` will take the input from a file and give that input to the command.
+
+- name: Copy MongoDB repo file
+  ansible.builtin.copy:
+    src: mongodb.repo
+    dest: /etc/yum.repos.d/mongodb.repo
+
+- name: Install MongoDB
+  ansible.builtin.yum:
+    name: mongodb-org
+    state: installed
+
+- name: Update MongoDB Configuration - Update Listen Address
+  ansible.builtin.replace:
+    path: /etc/mongod.conf
+    regexp: '127.0.0.1'
+    replace: '0.0.0.0'
+
