--- a/04-loops.yml
+++ b/04-loops.yml
@@ -9,3 +9,11 @@
         - banana
         - orange
 
+    - name: Print Fruit Name and Invetory Count
+      debug:
+        msg: Fruit Name = {{item.name}} , Available Count = {{item.count}}
+      loop:
+        - {name: apple, count: 10}
+        - {name: banana, count: 20}
+        - {name: orange, count: 30}
+
