--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -4,10 +4,9 @@
     state: installed
 
 - name: Download and Extract Frontend
-  ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/frontend/archive/main.zip
-    dest: /tmp
-    remote_src: yes
+  include_role:
+    name: common
+    tasks_from: download
 
 - name: Cleanup Old HTML Content
   ansible.builtin.file:
