--- a/roles/mongodb/tasks/main.yml
+++ b/roles/mongodb/tasks/main.yml
@@ -1,37 +1,3 @@
-
-#  # systemctl enable mongod
-#  # systemctl start mongod
-#
-#  ```
-#
-#  1. Update Listen IP address from 127.0.0.1 to 0.0.0.0 in config file
-#
-#Config file: `/etc/mongod.conf`
-#
-#  then restart the service
-#
-#  ```bash
-#  # systemctl restart mongod
-#
-#  ```
-#
-#  ## Every Database needs the schema to be loaded for the application to work.
-#
-#  Download the schema and load it.
-#
-#  ```
-#  # curl -s -L -o /tmp/mongodb.zip "https://github.com/roboshop-devops-project/mongodb/archive/main.zip"
-#
-#  # cd /tmp
-#  # unzip mongodb.zip
-#  # cd mongodb-main
-#  # mongo < catalogue.js
-#  # mongo < users.js
-#
-#  ```
-#
-#  Symbol `<` will take the input from a file and give that input to the command.
-
 - name: Copy MongoDB repo file
   ansible.builtin.copy:
     src: mongodb.repo
@@ -54,11 +20,10 @@
     state: started
     enabled: yes
 
-- name: Download and Extract MongoDB Schema
-  ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/mongodb/archive/main.zip
-    dest: /tmp
-    remote_src: yes
+- name: Download and Extract MongoDB Schema 
+  include_role:
+    name: common
+    tasks_from: download
 
 - name: Load Schema
   community.mongodb.mongodb_shell:
