--- a/roboshop.yml
+++ b/roboshop.yml
@@ -1,18 +1,22 @@
-- name: Setup Frontend Component
-  hosts: FRONTEND
+#- name: Setup Frontend Component
+#  hosts: FRONTEND
+#  become: yes
+#  roles:
+#    - frontend
+#
+#- name: Setup MongoDB Component
+#  hosts: MONGODB
+#  become: yes
+#  roles:
+#    - mongodb
+#
+#- name: Setup Catalogue Component
+#  hosts: CATALOGUE
+#  become: yes
+#  roles:
+#    - catalogue
+
+- name: RoboShop Setup
   become: yes
   roles:
-    - frontend
-
-- name: Setup MongoDB Component
-  hosts: MONGODB
-  become: yes
-  roles:
-    - mongodb
-
-- name: Setup Catalogue Component
-  hosts: CATALOGUE
-  become: yes
-  roles:
-    - catalogue
-
+    - "{{component}}"
