--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,3 +1,44 @@
-- name: Print catalogue
-  debug:
-    msg: catalogue
+
+#1. So let's switch to the `roboshop` user and run the following commands.
+#
+#```bash
+#$ curl -s -L -o /tmp/catalogue.zip "https://github.com/roboshop-devops-project/catalogue/archive/main.zip"
+#$ cd /home/roboshop
+#$ unzip /tmp/catalogue.zip
+#$ mv catalogue-main catalogue
+#$ cd /home/roboshop/catalogue
+#$ npm install
+#
+#```
+#
+#1. Update SystemD file with correct IP addresses
+#
+#Update `MONGO_DNSNAME` with MongoDB Server IP
+#
+#2. Now, lets set up the service with systemctl.
+#
+#```bash
+#  # mv /home/roboshop/catalogue/systemd.service /etc/systemd/system/catalogue.service
+#  # systemctl daemon-reload
+#  # systemctl start catalogue
+#  # systemctl enable catalogue
+#
+#```
+
+- name: Configure YUM repos.
+  ansible.builtin.shell: curl -fsSL https://rpm.nodesource.com/setup_lts.x | bash -
+
+- name: Install NodeJS
+  ansible.builtin.yum:
+    name:
+      - nodejs
+      - gcc-c++
+    state: installed
+
+- name: Add Application User
+  ansible.builtin.user:
+    name: roboshop
+    comment: RoboShop Project Application User
+
+
+
