--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,16 +1,4 @@
 
-#1. So let's switch to the `roboshop` user and run the following commands.
-#
-#```bash
-#$ curl -s -L -o /tmp/catalogue.zip "https://github.com/roboshop-devops-project/catalogue/archive/main.zip"
-#$ cd /home/roboshop
-#$ unzip /tmp/catalogue.zip
-#$ mv catalogue-main catalogue
-#$ cd /home/roboshop/catalogue
-#$ npm install
-#
-#```
-#
 #1. Update SystemD file with correct IP addresses
 #
 #Update `MONGO_DNSNAME` with MongoDB Server IP
@@ -51,10 +39,14 @@
     state: absent
 
 - name: Copy App Content
-  ansible.builtin.copy:
-    src: /tmp/catalogue-main/
-    dest: /home/roboshop/catalogue/
-    remote_src: yes
   become_user: roboshop
+  ansible.builtin.copy:
+    dest: /home/roboshop/catalogue/
+    src: /tmp/catalogue-main/
+    remote_src: yes
+
+- name: Install NodeJS Dependencies
+  community.general.npm:
+    path: /home/roboshop/catalogue
 
 
