--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,18 +1,3 @@
-
-#1. Update SystemD file with correct IP addresses
-#
-#Update `MONGO_DNSNAME` with MongoDB Server IP
-#
-#2. Now, lets set up the service with systemctl.
-#
-#```bash
-#  # mv /home/roboshop/catalogue/systemd.service /etc/systemd/system/catalogue.service
-#  # systemctl daemon-reload
-#  # systemctl start catalogue
-#  # systemctl enable catalogue
-#
-#```
-
 - name: Configure YUM repos.
   ansible.builtin.shell: curl -fsSL https://rpm.nodesource.com/setup_lts.x | bash -
 
@@ -50,6 +35,14 @@
     path: /home/roboshop/catalogue
   become_user: roboshop
 
+- name: Copy SystemD File
+  ansible.builtin.copy:
+    src: systemd.service
+    dest: /etc/systemd/system/catalogue.service
 
-
-
+- name: Start Catalogue Service
+  ansible.builtin.systemd:
+    name: catalogue
+    state: restarted
+    enabled: yes
+    daemon_reload: yes
