--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -48,7 +48,7 @@
 
 - name: Copy MySQL repo file
   ansible.builtin.copy:
-    name: mysql.repo
+    src: mysql.repo
     dest: /etc/yum.repos.d/mysql.repo
 
 - name: Install MySQL Server
