--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -69,8 +69,11 @@
     login_user: root
     login_password: RoboShop@1
   ignore_errors: yes
+  register: mysql_stat
 
 - name: Reset Passwrd
   debug:
-    msg: Ressting Password
+    msg: "{{mysql_stat}}"
+
+
 
