--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -71,10 +71,21 @@
   ignore_errors: yes
   register: mysql_stat
 
-- name: Reset MySQL Password
+- name: Reset Password Block
   when: mysql_stat.failed
-  debug:
-    msg: "{{mysql_stat}}"
+  block:
+    - name: Grab Default Password of MySQL
+      ansible.builtin.shell: grep 'temporary password' /var/log/mysqld.log | awk '{print $NF}'
+      register: DEFAULT_ROOT_PASSWORD
+
+    - name: Copy the SQL Password Reset file
+      ansible.builtin.copy:
+        src: rootpass.sql
+        dest: /tmp/rootpass.sql
+
+    - name: Reset MySQL Password
+      ansible.builtin.shell: mysql --connect-expired-password -uroot -p"{{DEFAULT_ROOT_PASSWORD.stdout}}" </tmp/rootpass.sql
+      
 
 
 
