--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -99,7 +99,12 @@
         src: pass-validate.sql
         dest: /tmp/pass-validate.sql
     - name: Uninstall Plugin
-      ansible.builtin.shell: mysql --connect-expired-password -uroot -pRoboShop@1 </tmp/pass-validate.sql
+      community.mysql.mysql_db:
+        state: import
+        name: all
+        target: /tmp/pass-validate.sql
+        login_user: root
+        login_password: RoboShop@1
 
 - name: Download and Extract MySQL
   include_role:
