--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -1,6 +1,24 @@
+- name: Add Application User
+  ansible.builtin.user:
+    name: roboshop
+    comment: RoboShop Project Application User
+
 - name: Download and Extract {{COMPONENT}}
   ansible.builtin.unarchive:
     src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
     dest: /tmp
     remote_src: yes
+
+- name: Cleanup Old Content
+  ansible.builtin.file:
+    path: /home/roboshop/{{COMPONENT}}
+    state: absent
+
+- name: Copy App Content
+  become_user: roboshop
+  ansible.builtin.copy:
+    dest: /home/roboshop/{{COMPONENT}}/
+    src: /tmp/{{COMPONENT}}-main/
+    remote_src: yes
+
 
