--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -8,41 +8,19 @@
       - gcc-c++
     state: installed
 
-- name: Add Application User
-  ansible.builtin.user:
-    name: roboshop
-    comment: RoboShop Project Application User
-
-- name: Download and Extract {{COMPONENT}} Content
+- name: Setup App USer, Download and Extract {{COMPONENT}} Content
   include_role:
     name: common
     tasks_from: download
-
-- name: Cleanup Old Content
-  ansible.builtin.file:
-    path: /home/roboshop/{{COMPONENT}}
-    state: absent
-
-- name: Copy App Content
-  become_user: roboshop
-  ansible.builtin.copy:
-    dest: /home/roboshop/{{COMPONENT}}/
-    src: /tmp/{{COMPONENT}}-main/
-    remote_src: yes
 
 - name: Install NodeJS Dependencies
   community.general.npm:
     path: /home/roboshop/{{COMPONENT}}
   become_user: roboshop
 
-- name: Copy SystemD File
-  ansible.builtin.copy:
-    src: systemd.service
-    dest: /etc/systemd/system/{{COMPONENT}}.service
+- name: Setup SyetemD
+  include_role:
+    name: common
+    tasks_from: systemd
 
-- name: Start {{COMPONENT}} Service
-  ansible.builtin.systemd:
-    name: "{{COMPONENT}}"
-    state: restarted
-    enabled: yes
-    daemon_reload: yes
+
