--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -2,6 +2,7 @@
   ansible.builtin.user:
     name: roboshop
     comment: RoboShop Project Application User
+  register: APP_USER_REGISTER
 
 - name: Download and Extract {{COMPONENT}}
   ansible.builtin.unarchive:
