--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -16,6 +16,10 @@
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
     executable: pip3
 
+- name: Print
+  debug:
+    msg: "{{APP_USER_REGISTER}}"
+
 - name: Setup SyetemD
   include_role:
     name: common
