--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -20,6 +20,18 @@
   debug:
     msg: "{{APP_USER_REGISTER}}"
 
+- name: Update USER ID in App Configuration
+  ansible.builtin.lineinfile:
+    path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
+    regexp: '^uid'
+    line: uid = {{APP_USER_REGISTER.uid}}
+
+- name: Update GROUP ID in App Configuration
+  ansible.builtin.lineinfile:
+    path: /home/roboshop/{{COMPONENT}}/{{COMPONENT}}.ini
+    regexp: '^gid'
+    line: gid = {{APP_USER_REGISTER.group}}
+
 - name: Setup SyetemD
   include_role:
     name: common
