--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -7,12 +7,12 @@
     state: installed
 
 - name: Setup App USer, Download and Extract {{COMPONENT}} Content
-  include_role:
+  ansible.builtin.include_role:
     name: common
     tasks_from: download
 
 - name: Install Python Dependencies
-  pip:
+  ansible.builtin.pip:
     requirements: /home/roboshop/{{COMPONENT}}/requirements.txt
     executable: pip3
 
@@ -29,6 +29,6 @@
     line: gid = {{APP_USER_REGISTER.group}}
 
 - name: Setup SyetemD
-  include_role:
+  ansible.builtin.include_role:
     name: common
     tasks_from: systemd
