--- a/roles/common/tasks/maven.yml
+++ b/roles/common/tasks/maven.yml
@@ -5,7 +5,7 @@
     state: installed
 
 - name: Setup App USer, Download and Extract {{COMPONENT}} Content
-  include_role:
+  ansible.builtin.include_role:
     name: common
     tasks_from: download
 
@@ -16,6 +16,6 @@
   become_user: roboshop
 
 - name: Setup SyetemD
-  include_role:
+  ansible.builtin.include_role:
     name: common
     tasks_from: systemd
