--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -9,7 +9,7 @@
     state: installed
 
 - name: Setup App USer, Download and Extract {{COMPONENT}} Content
-  include_role:
+  ansible.builtin.include_role:
     name: common
     tasks_from: download
 
@@ -19,7 +19,7 @@
   become_user: roboshop
 
 - name: Setup SyetemD
-  include_role:
+  ansible.builtin.include_role:
     name: common
     tasks_from: systemd
 
