--- a/roles/common/tasks/systemd.yml
+++ b/roles/common/tasks/systemd.yml
@@ -1,5 +1,5 @@
 - name: Copy SystemD File
-  ansible.builtin.copy:
+  ansible.builtin.template:
     src: systemd.service
     dest: /etc/systemd/system/{{COMPONENT}}.service
 
