Correct the Module Name, Spelling Mistake

--- a/08-promote.yml
+++ b/08-promote.yml
@@ -2,5 +2,5 @@
   hosts: localhost
   tasks:
     - name: Print ENV
-      ansible.buitin.debug:
+      ansible.builtin.debug:
         msg: ENV == {{ENV}}
