--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -13,11 +13,11 @@
     path: /usr/share/nginx/html
     state: absent
 
-- name: Copy the frontend content to nginx path
-  ansible.builtin.copy:
-    src: /tmp/frontend-main/static/
-    dest: /usr/share/nginx/html/
-    remote_src: yes
+#- name: Copy the frontend content to nginx path
+#  ansible.builtin.copy:
+#    src: /tmp/frontend-main/static/
+#    dest: /usr/share/nginx/html/
+#    remote_src: yes
 # Note: IN src and dest, ending / is very important when you are copying directories
 
 - name: Copy RoboShop Configuration
