--- a/roboshop-check.yml
+++ b/roboshop-check.yml
@@ -10,7 +10,7 @@
     - name: Launch instance
       amazon.aws.ec2:
          count: 1
-         group: "{{ security_group_id }}"
+         group_id: "{{ security_group_id }}"
          instance_type: "{{ instance_type }}"
          image: "{{ image }}"
          wait: true
