--- a/roboshop-check.yml
+++ b/roboshop-check.yml
@@ -47,3 +47,5 @@
       amazon.aws.ec2:
         state: 'absent'
         instance_ids: '{{ ec2.instance_ids }}'
+        region: us-east-1
+        
