--- a/roboshop-check.yml
+++ b/roboshop-check.yml
@@ -36,15 +36,16 @@
   hosts: launched
   become: True
   gather_facts: True
-  roles:
-    - "{{role_name}}"
-
-- name: Terminate instances
-  hosts: localhost
   tasks:
-    - name: Terminate instances that were previously launched
-      amazon.aws.ec2:
-        state: 'absent'
-        instance_ids: '{{ ec2.instance_ids }}'
-        region: us-east-1
+    - name: Import the role and Terminate the instance
+      block:
+        - name: Import a role
+          import_role:
+            name: "{{role_name}}"
+      always:
+        - name: Terminate instances that were previously launched
+          amazon.aws.ec2:
+            state: 'absent'
+            instance_ids: '{{ ec2.instance_ids }}'
+            region: us-east-1
 
