--- a/roboshop-check.yml
+++ b/roboshop-check.yml
@@ -43,8 +43,10 @@
     - name: Import the role and Terminate the instance
       block:
         - name: Import a role
-          import_role:
-            name: "{{role_name}}"
+          debug:
+            msg: Test
+#          import_role:
+#            name: "{{role_name}}"
       always:
         - name: Terminate instances that were previously launched
           amazon.aws.ec2:
