--- a/roboshop-check.yml
+++ b/roboshop-check.yml
@@ -51,6 +51,6 @@
         - name: Terminate instances that were previously launched
           amazon.aws.ec2:
             state: 'absent'
-            instance_ids: '{{ ec2.instance_ids }}'
+            instance_ids: '{{ INSTANCE_ID }}'
             region: us-east-1
 
