--- a/roboshop-check.yml
+++ b/roboshop-check.yml
@@ -52,6 +52,7 @@
 #            name: "{{role_name}}"
       always:
         - name: Terminate instances that were previously launched
+          delegate_to: 127.0.0.1
           amazon.aws.ec2:
             state: 'absent'
             instance_ids: '{{ INSTANCE_ID }}'
