--- a/roboshop-check.yml
+++ b/roboshop-check.yml
@@ -46,10 +46,8 @@
     - name: Import the role and Terminate the instance
       block:
         - name: Import a role
-          debug:
-            msg: Test
-#          import_role:
-#            name: "{{role_name}}"
+          import_role:
+            name: "{{role_name}}"
       always:
         - name: Terminate instances that were previously launched
           delegate_to: 127.0.0.1
