--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -4,11 +4,14 @@
     comment: RoboShop Project Application User
   register: APP_USER_REGISTER
 
-- name: Download and Extract {{COMPONENT}}
-  ansible.builtin.unarchive:
-    src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
-    dest: /tmp
-    remote_src: yes
+### As per standard process we download the software from a release rather than
+### from git repo. Hence we are commenting an
+
+#- name: Download and Extract {{COMPONENT}}
+#  ansible.builtin.unarchive:
+#    src: https://github.com/roboshop-devops-project/{{COMPONENT}}/archive/main.zip
+#    dest: /tmp
+#    remote_src: yes
 
 - name: Cleanup Old Content
   ansible.builtin.file:
