--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -28,3 +28,9 @@
 #    remote_src: yes
 
 ############### Download from Nexus
+- name: Download and Extract {{COMPONENT}}
+  ansible.builtin.unarchive:
+    src: http://nexus.roboshop.internal:8081/repository/${COMPONENT}/${COMPONENT}-${APP_VERSION}.zip
+    dest: "{{APP_LOCATION}}"
+    remote_src: yes
+
