--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -35,7 +35,7 @@
 
 - name: Download and Extract {{COMPONENT}}
   ansible.builtin.unarchive:
-    src: http://nexus.roboshop.internal:8081/repository/${COMPONENT}/${COMPONENT}-${APP_VERSION}.zip
+    src: http://nexus.roboshop.internal:8081/repository/{{COMPONENT}}/{{COMPONENT}}-{{APP_VERSION}}.zip
     dest: "{{APP_LOCATION}}"
     remote_src: yes
 
