--- a/roles/common/tasks/download.yml
+++ b/roles/common/tasks/download.yml
@@ -32,10 +32,12 @@
   ansible.builtin.file:
     path: "{{APP_LOCATION}}"
     state: directory
+  become_user: roboshop
 
 - name: Download and Extract {{COMPONENT}}
   ansible.builtin.unarchive:
     src: http://nexus.roboshop.internal:8081/repository/{{COMPONENT}}/{{COMPONENT}}-{{APP_VERSION}}.zip
     dest: "{{APP_LOCATION}}"
     remote_src: yes
-
+  become_user: roboshop
+  
