--- a/roles/common/tasks/maven.yml
+++ b/roles/common/tasks/maven.yml
@@ -8,6 +8,8 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: download
+  vars:
+    APP_LOCATION: "/home/roboshop/{{COMPONENT}}"
 
 - name: Make maven package
   ansible.builtin.shell: mvn clean package && mv target/shipping-1.0.jar shipping.jar
