--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -15,10 +15,10 @@
   vars:
     APP_LOCATION: "/home/roboshop/{{COMPONENT}}"
 
-- name: Install NodeJS Dependencies
-  community.general.npm:
-    path: /home/roboshop/{{COMPONENT}}
-  become_user: roboshop
+#- name: Install NodeJS Dependencies
+#  community.general.npm:
+#    path: /home/roboshop/{{COMPONENT}}
+#  become_user: roboshop
 
 - name: Setup SyetemD
   ansible.builtin.include_role:
