--- a/roles/common/tasks/maven.yml
+++ b/roles/common/tasks/maven.yml
@@ -1,7 +1,8 @@
 - name: Install Maven
   ansible.builtin.yum:
     name:
-      - maven
+      #- maven
+      - java
     state: installed
 
 - name: Setup App USer, Download and Extract {{COMPONENT}} Content
