--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -10,6 +10,8 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: download
+  vars:
+    APP_LOCATION: "/home/roboshop/{{COMPONENT}}"
 
 - name: Install Python Dependencies
   ansible.builtin.pip:
