--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -12,6 +12,7 @@
     tasks_from: download
   vars:
     APP_LOCATION: "/home/roboshop/{{COMPONENT}}"
+    APP_USER: roboshop
 
 - name: Install Python Dependencies
   ansible.builtin.pip:
