--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -9,6 +9,7 @@
     tasks_from: download
   vars:
     APP_USER: root
+    APP_LOCATION: /usr/share/nginx/html
 
 #- name: Cleanup Old HTML Content
 #  ansible.builtin.file:
