--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,4 +1,8 @@
-- name: NodeJS App Setup
-  include_role:
-    name: common
-    tasks_from: nodejs
+#- name: NodeJS App Setup
+#  include_role:
+#    name: common
+#    tasks_from: nodejs
+
+- name: lookup secretsmanager secret in the current region
+  debug: msg="{{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', bypath=true) }}"
+  
