--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -7,5 +7,5 @@
   register: out
 
 - name: lookup secretsmanager secret in the current region
-  debug: msg="{{out.stdout.DOCUMENTDB_MASTER_USERNAME}}"
+  debug: msg="{{lookup(out.stdout, DOCUMENTDB_MASTER_USERNAME)}}"
   
