--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -3,9 +3,9 @@
 #    name: common
 #    tasks_from: nodejs
 - name: Sample command
-  shell: echo "{{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json  }}"
+  shell: echo "{{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1')  }}"
   register: out
 
 - name: lookup secretsmanager secret in the current region
-  debug: msg="{{out.stdout.DOCUMENTDB_MASTER_USERNAME}}"
+  debug: msg="{{out.stdout | to_json}}.DOCUMENTDB_MASTER_USERNAME"
   
