--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -7,5 +7,5 @@
   register: out
 
 - name: lookup secretsmanager secret in the current region
-  debug: msg="{{out.stdout | to_json}}.DOCUMENTDB_MASTER_USERNAME"
+  debug: msg="{{out.stdout | to_json}}"
   
