--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -7,5 +7,5 @@
 #  register: out
 
 - name: lookup secretsmanager secret in the current region
-  debug: msg="{{ lookup(lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json), DOCUMENTDB_MASTER_USERNAME }}"
+  debug: msg="{{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json)}}"
   
