--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -2,10 +2,10 @@
 #  include_role:
 #    name: common
 #    tasks_from: nodejs
-#- name: Sample command
-#  shell: echo "{{ lookup(lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json), DOCUMENTDB_MASTER_USERNAME }}"
-#  register: out
+- name: Sample command
+  shell: echo "{{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1')}} | jq .DOCUMENTDB_MASTER_USERNAME"
+  register: out
 
 - name: lookup secretsmanager secret in the current region
-  debug: msg="{{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1')}}"
+  debug: msg="{{ out.stdout }}"
   
