--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -3,7 +3,7 @@
 #    name: common
 #    tasks_from: nodejs
 - name: Sample command
-  shell: "echo {{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1')}} >/tmp/out"
+  shell: "echo { {{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') }} } >/tmp/out"
   register: out
 
 - name: lookup secretsmanager secret in the current region
