--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,11 +1,12 @@
-#- name: NodeJS App Setup
-#  include_role:
-#    name: common
-#    tasks_from: nodejs
-- name: Sample command
-  shell: "echo {{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json }} | jq .DOCUMENTDB_MASTER_USERNAME"
-  register: out
+- name: NodeJS App Setup
+  include_role:
+    name: common
+    tasks_from: nodejs
 
-- name: lookup secretsmanager secret in the current region
-  debug: msg="{{ out.stdout[1:-1] }}"
+#- name: Sample command
+#  shell: "echo {{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json }} | jq .DOCUMENTDB_MASTER_USERNAME"
+#  register: out
+#
+#- name: lookup secretsmanager secret in the current region
+#  debug: msg="{{ out.stdout[1:-1] }}"
   
