--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -25,7 +25,7 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: aws-secret-manager
-  vars:
+  loop:
     - { secretName: "DOCUMENTDB_MASTER_USERNAME", secretVar: "MONGO_USERNAME" }
 
 - name: Print
