--- a/roles/common/tasks/aws-secret-manager.yml
+++ b/roles/common/tasks/aws-secret-manager.yml
@@ -1,6 +1,9 @@
 - name: Fetch Secret
   shell: "echo {{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json }} | jq .{{item.secretName}}"
-  register: "{{item.secretVar}}"
+  register: out
+
+- name: Set Secret Var
+  set_fact: '{{ item.secretVar }}={{ out.stdout }}'
 
 
 
