--- a/roles/common/tasks/aws-secret-manager.yml
+++ b/roles/common/tasks/aws-secret-manager.yml
@@ -3,7 +3,7 @@
   register: out
 
 - name: Set Secret Var
-  set_fact: '{{ item.secretVar }}={{ out.stdout }}'
+  set_fact: 'test={{ out.stdout }}'
 
 
 
