--- a/roles/common/tasks/aws-secret-manager.yml
+++ b/roles/common/tasks/aws-secret-manager.yml
@@ -3,7 +3,8 @@
   register: out
 
 - name: Set Secret Var
-  set_fact: 'test={{ out.stdout }}'
+  set_fact:
+    test: "{{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json | }}"
 
 
 
