--- a/roles/common/tasks/aws-secret-manager.yml
+++ b/roles/common/tasks/aws-secret-manager.yml
@@ -1,10 +1,7 @@
-- name: Fetch Secret
-  shell: "echo {{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json }} | jq .{{item.secretName}}"
+- name: Fetch Secrets
+  shell: "echo {{lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json}} | jq"
   register: out
 
-- name: Set Secret Var
+- name: Set Secrets
   set_fact:
-    test: "{{ lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json | }}"
-
-
-
+    secrets: "{{ out.stdout | from_json }}"
