--- a/roles/catalogue/templates/systemd.service
+++ b/roles/catalogue/templates/systemd.service
@@ -2,7 +2,7 @@
 Description = Catalogue Service
 [Service]
 User=roboshop
-Environment=MONGO_URL="mongodb://{{MONGO_USERNAME}}:{{MONGO_PASSWORD}}@{{MONGO_URL}}:27017/catalogue?tls=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false"
+Environment=MONGO_URL="mongodb://{{secrets.DOCUMENTDB_MASTER_USERNAME}}:{{secrets.DOCUMENTDB_MASTER_PASSWORD}}@{{MONGO_ENDPOINT}}:27017/catalogue?tls=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false"
 ExecStart=/bin/node /home/roboshop/catalogue/server.js
 SyslogIdentifier=catalogue
 
