--- a/roles/catalogue/tasks/main.yml
+++ b/roles/catalogue/tasks/main.yml
@@ -1,6 +1,6 @@
-#- name: NodeJS App Setup
-#  include_role:
-#    name: common
-#    tasks_from: nodejs
+- name: NodeJS App Setup
+  include_role:
+    name: common
+    tasks_from: nodejs
 
 
