--- a/roles/user/templates/systemd.service
+++ b/roles/user/templates/systemd.service
@@ -3,7 +3,7 @@ Description = User Service
 [Service]
 User=roboshop
 Environment=REDIS_HOST=redis-{{ENV}}.roboshop.internal
-Environment=MONGO_URL="mongodb://mongodb-{{ENV}}.roboshop.internal:27017/users"
+Environment=MONGO_URL=MONGO_URL="mongodb://{{ secrets.DOCUMENTDB_MASTER_USERNAME }}:{{secrets.DOCUMENTDB_MASTER_PASSWORD}}@{{MONGODB_ENDPOINT}}:27017/catalogue?tls=true&replicaSet=rs0&readPreference=secondaryPreferred&retryWrites=false"
 ExecStart=/bin/node /home/roboshop/user/server.js
 SyslogIdentifier=user
 
