--- a/roles/payment/templates/systemd.service
+++ b/roles/payment/templates/systemd.service
@@ -8,8 +8,8 @@ WorkingDirectory=/home/roboshop/payment
 Environment=CART_HOST=cart-{{ENV}}.roboshop.internal
 Environment=USER_HOST=user-{{ENV}}.roboshop.internal
 Environment=AMQP_HOST=rabbitmq-{{ENV}}.roboshop.internal
-Environment=AMQP_USER=roboshop
-Environment=AMQP_PASS=roboshop123
+Environment=AMQP_USER={{ secrets.RABBITMQ_USERNAME }}
+Environment=AMQP_PASS={{ secrets.RABBITMQ_PASSWORD }}
 
 ExecStart=/usr/local/bin/uwsgi --ini payment.ini
 SyslogIdentifier=payment
