--- a/roles/elk/tasks/main.yml
+++ b/roles/elk/tasks/main.yml
@@ -8,3 +8,9 @@
     name: logstash
     state: restarted
 
+- name: Wait for LogStash to Open the Port
+  wait_for:
+    port: 5044
+    delay: 10
+    timeout: 120
+
