--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -13,7 +13,7 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "%{[@metadata][beat]}-%{[@metadata][version]}"
+    index => "%{[fields][appName]}-%{[fields][env]}-%{+yyyy-MM-dd}"
   }
 }
 
