--- a/roles/common/tasks/python.yml
+++ b/roles/common/tasks/python.yml
@@ -40,3 +40,13 @@
   ansible.builtin.include_role:
     name: common
     tasks_from: systemd
+
+- name: Configure Rsyslog
+  ansible.builtin.include_role:
+    name: elk
+    tasks_from: rsyslog
+
+- name: Configure Filebeat
+  ansible.builtin.include_role:
+    name: elk
+    tasks_from: filebeat
