--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -13,10 +13,13 @@ filter {
   }
 }
 
+# output {
+#   elasticsearch {
+#     hosts => ["http://localhost:9200"]
+#     index => "%{[fields][appName]}-%{[fields][env]}-%{+yyyy-MM-dd}"
+#   }
+# }
 output {
-  elasticsearch {
-    hosts => ["http://localhost:9200"]
-    index => "%{[fields][appName]}-%{[fields][env]}-%{+yyyy-MM-dd}"
-  }
-}
+      stdout {}
+    }
 
