--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -8,9 +8,9 @@ filter {
   json {
     source => "message"
   }
-  if [req][url] == "/health" {
-    drop {}
-  }
+#   if [req][url] == "/health" {
+#     drop {}
+#   }
 }
 
 # output {
