--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -8,18 +8,18 @@ filter {
   json {
     source => "message"
   }
-#   if [req][url] == "/health" {
-#     drop {}
-#   }
+  if [req][url] == "/health" {
+    drop {}
+  }
 }
 
-# output {
-#   elasticsearch {
-#     hosts => ["http://localhost:9200"]
-#     index => "%{[fields][appName]}-%{[fields][env]}-%{+yyyy-MM-dd}"
-#   }
-# }
 output {
-      stdout {}
-    }
+  elasticsearch {
+    hosts => ["http://localhost:9200"]
+    index => "%{[fields][appName]}-%{[fields][env]}-%{+yyyy-MM-dd}"
+  }
+}
+# output {
+#       stdout {}
+#     }
 
