--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -8,7 +8,7 @@ filter {
   json {
     source => "message"
   }
-  if [req][url] == "/health" {
+  if [req][url] == "/health" or [message] =~ "^\(.*"  {
     drop {}
   }
 }
