--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -5,21 +5,28 @@ input {
 }
 
 filter {
+
+  if [fields][logType] == "json" and [message] =~ "^\(.*"  {
+    drop {}
+  }
+
   json {
     source => "message"
   }
-  if [req][url] == "/health" or [message] =~ "^\(.*"  {
-    drop {}
+
+  if [req][url] == "/health" {
+    drop{}
   }
+
 }
 
-# output {
-#   elasticsearch {
-#     hosts => ["http://localhost:9200"]
-#     index => "%{[fields][appName]}-%{[fields][env]}-%{+yyyy-MM-dd}"
-#   }
-# }
 output {
-      stdout {}
-    }
+  elasticsearch {
+    hosts => ["http://localhost:9200"]
+    index => "%{[fields][appName]}-%{[fields][env]}-%{+yyyy-MM-dd}"
+  }
+}
+# output {
+#       stdout {}
+#     }
 
