--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -6,6 +6,10 @@ input {
 
 filter {
 
+  if [fields][appName] == "payment" and [message] =~ "^\[pid.*" {
+    drop{}
+  }
+
   if [fields][logType] == "json" and [message] =~ "^\(.*"  {
     drop {}
   }
@@ -26,6 +30,7 @@ output {
     index => "%{[fields][appName]}-%{[fields][env]}-%{+yyyy-MM-dd}"
   }
 }
+
 # output {
 #       stdout {}
 #     }
