--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -14,6 +14,12 @@ filter {
     drop {}
   }
 
+  if [fields][appName] == "payment" {
+    grok {
+      match => { "message" => "\[%{TIMESTAMP_ISO8601}\]%{SPACE}%{WORD:level}%{SPACE}in%{SPACE}%{WORD:appname}:%{SPACE}%{GREEDYDATA:msg}" }
+    }
+  }
+
   json {
     source => "message"
   }
