--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -20,6 +20,12 @@ filter {
     }
   }
 
+  if [fields][appName] == "shipping" {
+    grok {
+      match => { "message" => "%{TIMESTAMP_ISO8601}%{SPACE}%{WORD:level}%{SPACE}%{NUMBER:pid}%{SPACE}---%{SPACE}\[%{DATA:threadName}\]%{SPACE}(%{JAVACLASS:className}|%{WORD:w1}\$%{WORD:w2})%{SPACE}:%{SPACE}%{GREEDYDATA:msg}"}
+    }
+  }
+
   json {
     source => "message"
   }
