--- a/roles/elk/templates/filebeat.yml
+++ b/roles/elk/templates/filebeat.yml
@@ -11,6 +11,13 @@ filebeat.inputs:
     env: {{ENV}}
     logType: {{logType}}
 
+{% if COMPONENT == "shipping" %}
+  multiline.type: pattern
+  multiline.pattern: '^[0-9]'
+  multiline.negate: true
+  multiline.match: after
+{% endif %}
+
 output.logstash:
   hosts: ["172.31.20.41:5044"]
 
