--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -29,6 +29,12 @@
     dest: /etc/nginx/default.d/roboshop.conf
   notify: Restart Nginx
 
+- name: Copy Nginx Configuration
+  ansible.builtin.template:
+    src: nginx.conf
+    dest: /etc/nginx/nginx.conf
+  notify: Restart Nginx
+
 - name: Start Nginx Service
   ignore_errors: "{{CHECK_MODE}}"
   ansible.builtin.systemd:
