--- a/roles/frontend/vars/main.yml
+++ b/roles/frontend/vars/main.yml
@@ -2,6 +2,6 @@ COMPONENT: frontend
 APP_LOCATION: /usr/share/nginx/html
 APP_USER: root
 CHECK_MODE: false
-logType: raw
+logType: json
 logLocation: /var/log/nginx/access.log
 
