--- a/roles/frontend/templates/nginx.conf
+++ b/roles/frontend/templates/nginx.conf
@@ -16,7 +16,7 @@ http {
         '"time_local":"$time_local",'
         '"remote_address":"$http_x_forwarded_for",'
         '"request":"$request",'
-        '"status": "$status",'
+        '"status": $status,'
         '"body_bytes_sent":"$body_bytes_sent",'
         '"request_time":"$request_time",'
         '"upstream_response_time":"$upstream_response_time",'
