--- a/roles/frontend/templates/nginx.conf
+++ b/roles/frontend/templates/nginx.conf
@@ -10,21 +10,9 @@ events {
 }
 
 http {
-    #log_format  main  '$http_x_forwarded_for $request $status $body_bytes_sent $http_referer "$http_user_agent" $request_time $upstream_response_time';
-    log_format json_combined escape=json
-      '{'
-        '"time_local":"$time_local",'
-        '"remote_address":"$http_x_forwarded_for",'
-        '"request":"$request",'
-        '"status": $status,'
-        '"body_bytes_sent":"$body_bytes_sent",'
-        '"request_time":"$request_time",'
-        '"upstream_response_time":"$upstream_response_time",'
-        '"http_referrer":"$http_referer",'
-        '"http_user_agent":"$http_user_agent"'
-      '}';
+    log_format  main  '$http_x_forwarded_for $request $status $body_bytes_sent $http_referer "$http_user_agent" $request_time $upstream_response_time';
 
-    access_log  /var/log/nginx/access.log  json_combined;
+    access_log  /var/log/nginx/access.log  main;
 
     sendfile            on;
     tcp_nopush          on;
