--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -14,6 +14,7 @@ filter {
     drop {}
   }
 
+
   if [fields][appName] == "payment" {
     grok {
       match => { "message" => "\[%{TIMESTAMP_ISO8601}\]%{SPACE}%{WORD:level}%{SPACE}in%{SPACE}%{WORD:appname}:%{SPACE}%{GREEDYDATA:msg}" }
@@ -32,9 +33,12 @@ filter {
     }
   }
 
-  json {
-    source => "message"
+  if [fields][logType] == "json" {
+    json {
+      source => "message"
+    }
   }
+
 
   if [req][url] == "/health" {
     drop{}
