--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -39,8 +39,7 @@ filter {
     }
   }
 
-
-  if [req][url] == "/health" {
+  if [req][url] == "/health" or http_path == "/health" {
     drop{}
   }
 
