--- a/roles/prometheus/templates/prometheus.yml
+++ b/roles/prometheus/templates/prometheus.yml
@@ -27,4 +27,7 @@ scrape_configs:
     ec2_sd_configs:
       - region: us-east-1
         port: 9100
+        filters:
+          - name: "Key:prometheus-monitor"
+            values: ["yes", "true", "Yes", "True", "YES", "TRUE"]
 
