--- a/roles/common/tasks/aws-secret-manager.yml
+++ b/roles/common/tasks/aws-secret-manager.yml
@@ -1,5 +1,5 @@
 - name: Fetch Secrets
-  shell: "echo {{lookup('amazon.aws.aws_secret', 'dev/roboshop/secrets', region='us-east-1') | to_json}} | jq"
+  shell: "echo {{lookup('amazon.aws.aws_secret', '{{ENV}}/roboshop/secrets', region='us-east-1') | to_json}} | jq"
   register: out
 
 - name: Set Secrets
