--- a/roles/frontend/templates/roboshop.conf
+++ b/roles/frontend/templates/roboshop.conf
@@ -21,3 +21,8 @@
         stub_status on;
         access_log off;
     }
+
+    location /health {
+        stub_status on;
+        access_log off;
+    }
