--- a/roles/elk/templates/logstash.conf
+++ b/roles/elk/templates/logstash.conf
@@ -27,7 +27,8 @@ filter {
     }
   }
 
-  if [fields][appName] == "frontend" {
+  #if [fields][appName] == "frontend" {
+  if [kubernetes][container][name] == "frontend" {
     grok {
       match => { "message" => "(%{IP:source_ip}|-)%{SPACE}%{WORD:http_method}%{SPACE}%{PATH:http_path}%{SPACE}%{WORD}/%{NUMBER}%{SPACE}%{NUMBER:http_status:int}%{SPACE}%{NUMBER:http_response_size:int}%{SPACE}(%{URI:http_url}|-)%{SPACE}%{QS:http_agent}%{SPACE}%{NUMBER:nginx_response_time:float}%{SPACE}(%{NUMBER:backend_response_time:float}|-)" }
     }
